tests/type-errors/bad_entries_unknown_entry.arl
archetype bad_entries_unknown_entry

entries {
   <int>       set_value
   <int * int> add_value
}
variable c : address = @KT1RNB9PXsnp7KMkiMrWNMRzPjuefSWojBAm


entry add_one(n : int) {
  effect {
    transfer 0tz to c call fake_call(0)
  }
}
